--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,11 +7,20 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="800" Width="1600">
     <Grid >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.8*"></RowDefinition>
+            <RowDefinition Height="0.1*"></RowDefinition>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Image Grid.Column="0" x:Name="image1_test"></Image>
         <Image Grid.Column="1" x:Name="image2_test"></Image>
+        <Image Grid.Column="2" x:Name="image3_test"></Image>
+        <Button x:Name="Regenerate_Button" Grid.Row="1" Click="Regenerate_Button_Click"> Regenerate data</Button>
+        <Button x:Name="Clustering_Button" Grid.Column="1" Grid.Row="1" Click="Clustering_Button_Click" >Clustering</Button>
+        
     </Grid>
 </Window>
