--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="800" Width="1600">
     <Grid >
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.8*"></RowDefinition>
+            <RowDefinition Height="0.9*"></RowDefinition>
             <RowDefinition Height="0.1*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -21,6 +21,23 @@
         <Image Grid.Column="2" x:Name="image3_test"></Image>
         <Button x:Name="Regenerate_Button" Grid.Row="1" Click="Regenerate_Button_Click"> Regenerate data</Button>
         <Button x:Name="Clustering_Button" Grid.Column="1" Grid.Row="1" Click="Clustering_Button_Click" >Clustering</Button>
-        
+        <Grid Grid.Row="2" Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition ></RowDefinition>
+                <RowDefinition ></RowDefinition>
+                <RowDefinition ></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.3*"></ColumnDefinition>
+                <ColumnDefinition Width="0.7*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <TextBox x:Name="Cluster_Coord" Grid.Column="1" Grid.Row="0">200,200;400,400;600,200</TextBox>
+            <TextBox x:Name="Cluster_Count" Grid.Column="1" Grid.Row="1">20</TextBox>
+            <TextBox x:Name="Centroids_Count" Grid.Column="1" Grid.Row="2">3</TextBox>
+
+            <Label Grid.Column="0" Grid.Row="0">Clusters coordinates:</Label>
+            <Label Grid.Column="0" Grid.Row="1">Count of elems in clusters:</Label>
+            <Label Grid.Column="0" Grid.Row="2">Count of centroids:</Label>
+        </Grid>
     </Grid>
 </Window>
